fix weird spacing on header

--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -33,8 +33,8 @@ main
             margin: 1rem
             filter: drop-shadow(0 0 12px rgba(0,0,20,.1))
         .item
-            height: calc(100% - 1rem)
-            margin: .5rem
+            height: calc(100% - 2rem)
+            margin: 1rem .5rem
             border-radius: 7px
             box-sizing: border-box
             padding: 0 1rem
